# i3-windguru

./: .gitignore  README.md
i3-weather/: Cargo.toml
i3-weather/src/: i3status.rs  main.rs  output.rs  windguru.rs
research/: decompilation.js  md5  request-that-works copy.md  request-that-works.md
