[package]
name = "i3-weather"
version = "0.1.0"
authors = ["Jean Guegant <jean.guegant@king.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["json"] }
tokio = { version="0.2.22", features = ["full", "tracing"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.6.1"
rust-crypto = "0.2.36"
itertools = "0.9" 